--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
@@ -12,13 +12,13 @@
             </app-timesheet-day-label>
 
             <div class="w-100" style="padding: 0 2px 0 2px; z-index:0" 
-              fxLayout="column" fxLayoutAlign="start center" fxFlex>
-                <app-timesheet-mission-bar class="w-100 mb-1 fadeInDown"
-                  *ngFor="let timesheet of summaries[weekDay]?.timesheets | sortByDate: 'startTime';" 
-                    [timesheet]="timesheet"
-                    (barClicked)="timesheet.status ? openTimesheetCard($event) : openTimesheetForm({entityId: timesheet.id})"
-                    [style.height.px]="(timesheet.totalHours / 14)*300">
+              fxLayout="column" fxLayoutAlign="start stretch" fxFlex>
+              <ng-container *ngFor="let timesheet of summaries[weekDay]?.timesheets | sortByDate: 'startTime'; trackBy: trackByTimesheet;" >
+                <app-timesheet-mission-bar class="mb-1 fadeInDown"                      
+                  [timesheet]="timesheet"
+                  (barClicked)="timesheet.status ? openTimesheetCard(timesheet.id) : openTimesheetForm({entityId: timesheet.id})">
                 </app-timesheet-mission-bar>
+              </ng-container>
             </div>
 
           </div>
