--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -155,6 +155,7 @@ a {
    width:calc(100% - (#{$gap-size} * 8px))!important;
 }
 
+.loading-overlay{pointer-events: none}
 .loading-overlay::after {
   content: ""; // ::before and ::after both require content
   position: absolute;
