mission filter disable reset if empty form

--- a/src/app/mission-modules/mission-list/mission-filter/mission-filter-view/mission-filter-view.component.html
+++ b/src/app/mission-modules/mission-list/mission-filter/mission-filter-view/mission-filter-view.component.html
@@ -47,7 +47,7 @@
     <span class="mb-2"></span>
 
     <span fxLayout="row" fxLayoutAlign="space-between center">
-        <button mat-button color="warn" (click)="reset()">Nullstill</button>
+        <button mat-button [disabled]="!isFormNotEmpty()" color="warn" (click)="reset()">Nullstill</button>
 
         <button mat-button color="primary" 
             [disabled]="filterForm.invalid || filterForm.pristine"
