--- a/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,5 +1,5 @@
 
-    <app-mission-details-view *ngIf="details$ | async; let details" [details]="details">
+    <app-mission-details-view *ngIf="mission$ | async; let mission" [mission]="mission">
     </app-mission-details-view>
     <input type="file" style="display:none" #imageInput (change)="updateHeaderImage($event.target.files)">
     <router-outlet></router-outlet>
