--- a/src/styles/custom-theme.scss
+++ b/src/styles/custom-theme.scss
@@ -40,4 +40,5 @@ mat-toolbar-single-row.toolbar-slim{
   height:auto!important;
   padding: 2px!important;
   min-height:40px!important;
+  max-height:44px!important;
 } 
