--- a/src/app/layout/main-nav/detail-top-nav/detail-top-nav.component.html
+++ b/src/app/layout/main-nav/detail-top-nav/detail-top-nav.component.html
@@ -42,7 +42,7 @@
 
     <mat-toolbar *ngIf="config?.title && config.title.length > 0" 
         [ngClass]="config.imgSrc ? 'overlay overlay-bottom' : 'bg-primary'"
-        class="toolbar-slim color-foreground slideInDown">
+        class="detail-nav color-foreground slideInDown">
 
         <span class="ml-6 mb-2">
             <ng-container *ngFor="let line of config.title; let last =  last">
