add active filter counts and ui indication when filters are active

--- a/src/app/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/src/app/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -1,5 +1,5 @@
  <app-mission-list-view *ngIf="filteredMissions$ | async; let filteredMissions"
-  [missions]="filteredMissions?.missions" 
+  [missions]="filteredMissions?.records" 
   (search)="searchMissions($event)">
 </app-mission-list-view>
 
