--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/timesheet-day-label/timesheet-day-label.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/timesheet-day-label/timesheet-day-label.component.html
@@ -1,4 +1,5 @@
-<span class="mat-elevation-z2 bg-foreground pt-2" fxLayout="column" fxLayoutAlign="start center" matRipple 
+<span class="mat-elevation-z2 pt-2" fxLayout="column" fxLayoutAlign="start center" matRipple 
+  [ngClass]="(date | isToday) ? 'bg-accent' : 'bg-foreground'"
   (click)="labelClicked.emit(date)">
 
     <div fxLayout="column" fxLayoutAlign="center center" *ngIf="date" >
@@ -14,8 +15,7 @@
         {{ date | date : 'MMM' }}
       </span>
     </div>
-
-    
+ 
     <mat-icon class="icon m-1">add</mat-icon>
     
 </span>
