--- a/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
@@ -12,20 +12,31 @@
       Velg ett oppdrag fra listen
     </mat-error>
   </mat-form-field>
-  
+
   <span fxLayout="row" fxLayoutAlign="space-between start">
-    <label fxFlex=46>
+
+    <label fxFlex=42>
       <mat-form-field class="w-100">
         <input matInput placeholder="Dato" formControlName="date" aria-label="Velg dato" required
-          [owlDateTimeTrigger]="d3" [owlDateTime]="d3">
+          [owlDateTimeTrigger]="d3" [owlDateTime]="d3" >
           <mat-error *ngIf="date.errors">
             Velg en dato
           </mat-error>
       </mat-form-field>
       <owl-date-time pickerType="calendar" start #d3></owl-date-time>
     </label>
+  
+    <app-ion-date-picker fxFlex=20 format="HH:mm" 
+      [value]="startTime.value" 
+      (valueChanged)="startTime.setValue($event);startTime.markAsDirty()">
+    </app-ion-date-picker>
+ 
+    <app-ion-date-picker fxFlex=20 format="HH:mm" 
+      [value]="endTime.value" 
+      (valueChanged)="endTime.setValue($event);endTime.markAsDirty()">
+    </app-ion-date-picker>
 
-    <label fxFlex=46>
+    <!-- <label fxFlex=46>
       <mat-form-field class="w-100">
         <input matInput placeholder="Arbeidstid" formControlName="timeRange" required selectMode="range"
           [owlDateTimeTrigger]="t1" [owlDateTime]="t1">
@@ -35,7 +46,7 @@
       </mat-form-field>
       <owl-date-time pickerType="timer"  stepMinute="15" [startAt]="config?.entity?.startTime || initTime" #t1>
       </owl-date-time>
-    </label>
+    </label> -->
   </span>
 
   <mat-form-field>
