--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,10 @@
 
 @include gap-units($gap-size);
 
+:root{
+  --ion-color-primary: black;
+}
+
 html, body { height: 100%; background:$background-color;color:black;overflow:hidden;padding:0;margin:0}
 body {font-family: Roboto, "Helvetica Neue", sans-serif;}
 
