--- a/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -1,8 +1,20 @@
-<app-document-list #documentList *ngIf="documentsWithType$ | async; let documents"
+<app-selectable-list #documentList  
+    *ngIf="documentsWithType$ | async; let documents" identifier="id"
     [totalRows]="(isXs$ | async) ? 2 : 4"
     [entities]="documents" 
+    [itemTemplate]="documentTemplate"
     (selectionChanged)="onSelectionChange($event)"
-    (documentClicked)="downloadDocument($event)">
-</app-document-list>
+    (itemClicked)="downloadDocument($event)">
+</app-selectable-list>
+
+<ng-template #documentTemplate let-entity>
+    <div class="bg-foreground text-center mat-elevation-z2 p-2 pt-6 pb-6 m-1 fadeIn">
+        <mat-icon [svgIcon]="entity.fileName | fileExtension | fileExtensionIcon" class="scale-150 mb-2"></mat-icon>
+        <div>{{ entity.documentType?.name }}</div>
+
+        <div class="mat-caption">Filtype: {{ entity.fileName | fileExtension | uppercase }}</div>
+        <div class="mat-caption">Lastet opp 21.mai 2020</div>
+    </div>
+</ng-template>
 
 <router-outlet></router-outlet>
