replace date pickers with new ion & add value setter to ion

--- a/src/app/shared-timesheet/components/timesheet-filter-view/timesheet-filter-view.component.html
+++ b/src/app/shared-timesheet/components/timesheet-filter-view/timesheet-filter-view.component.html
@@ -9,28 +9,28 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-divider></mat-divider>   
+    <mat-divider></mat-divider>
     <span class="mb-2"></span>
   </ng-container>
 
   <ng-container *ngIf="!(config?.disabledFilters | arrayIncludes : 'mission')">
     <mat-form-field *appActiveStringFilter="let entities$; config: stringFilterConfig">
-      <input matInput placeholder="Oppdrag" formControlName="mission" aria-label="Velg oppdrag" [matAutocomplete]="auto1">
+      <input matInput placeholder="Oppdrag" formControlName="mission" aria-label="Velg oppdrag"
+        [matAutocomplete]="auto1">
       <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayMissionAddress">
         <mat-option *ngFor="let mission of entities$ | async" [value]="mission">
           ({{ mission.id }}) {{ mission.address }}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
-    <mat-divider></mat-divider>   
+    <mat-divider></mat-divider>
     <span class="mb-2"></span>
   </ng-container>
 
   <ng-container *ngIf="!(config?.disabledFilters | arrayIncludes : 'dateRange')">
     <label class="mat-caption">Velg tidsrom</label>
 
-    <mat-radio-group color="primary" formControlName="dateRangePreset"  
-      fxLayoutGap="8px" class="mb-2">
+    <mat-radio-group color="primary" formControlName="dateRangePreset" fxLayoutGap="8px" class="mb-2">
       <mat-radio-button [value]="dateRangePresets.CurrentWeek">
         Denne uken
       </mat-radio-button>
@@ -39,7 +39,7 @@
       </mat-radio-button>
       <mat-radio-button [value]="dateRangePresets.CurrentYear">
         I år
-      </mat-radio-button>     
+      </mat-radio-button>
       <mat-radio-button [value]="dateRangePresets.CustomMonth" #customMonthSelect>
         Velg måned
       </mat-radio-button>
@@ -51,32 +51,20 @@
       </mat-radio-button>
     </mat-radio-group>
 
-    <ng-container *ngIf="customDateRangeSelect.checked">
-      <mat-form-field style="width:164px">
-        <input matInput formControlName="dateRange" placeholder="Velg tidsrom" selectMode="range" 
-        [owlDateTimeTrigger]="customDateRange" [owlDateTime]="customDateRange">
-        <button mat-button *ngIf="dateRange" matSuffix mat-icon-button aria-label="Lukk" (click)="dateRange.setValue(null)">
-          <mat-icon>close</mat-icon>
-        </button>
-      </mat-form-field>
+    <div *ngIf="customDateRangeSelect.checked" fxLayout="row" fxLayoutAlign="space-between start">
+      <app-ion-date-picker fxFlex=45 ionFormat="YYYY-MMMM-DD" datePipeFormat="MMM d, y" placeholder="startdato"
+        [control]="startDate" [max]="endDate.value">
+      </app-ion-date-picker>
+  
+      <app-ion-date-picker fxFlex=45 ionFormat="YYYY-MMMM-DD" datePipeFormat="MMM d, y" placeholder="sluttdato"
+        [control]="endDate" [min]="startDate.value">
+      </app-ion-date-picker>
+    </div>
 
-      <owl-date-time pickerType="calendar" #customDateRange></owl-date-time>
-    </ng-container>
-
-    <ng-container *ngIf="customMonthSelect.checked">
-      <mat-form-field style="width:164px">
-        <input matInput  placeholder="Velg måned" selectMode="range"
-          [owlDateTimeTrigger]="customMonth" [owlDateTime]="customMonth" 
-          formControlName="dateRange">
-        <button mat-button *ngIf="dateRange" matSuffix mat-icon-button aria-label="Lukk" (click)="dateRange.setValue(null)">
-          <mat-icon>close</mat-icon>
-        </button>
-      </mat-form-field>
-
-      <owl-date-time pickerType="calendar"  startView="year"
-        (monthSelected)="selectMonthHandler($event, customMonth)" #customMonth>
-      </owl-date-time>
-    </ng-container>
+    <app-ion-date-picker *ngIf="customMonthSelect.checked" placeholder="måned" style="width:150px"
+      ionFormat="YYYY-MMMM" datePipeFormat="MMMM, y" 
+      [control]="startDate" [min]="startDate.value" [valueSetter]="selectMonthHandler">
+    </app-ion-date-picker>
 
     <mat-divider></mat-divider>
     <span class="mb-2"></span>
@@ -84,13 +72,13 @@
 
   <ng-container *ngIf="!(config?.disabledFilters | arrayIncludes : 'status')">
     <label class="mat-caption">Velg status</label>
-    <mat-radio-group formControlName="status" color="primary"
-      fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-2">
+    <mat-radio-group formControlName="status" color="primary" fxLayout="row" fxLayoutAlign="start center"
+      fxLayoutGap="8px" class="mb-2">
       <mat-radio-button [value]="timesheetStatus.Open">
-          Åpen
+        Åpen
       </mat-radio-button>
       <mat-radio-button [value]="timesheetStatus.Confirmed">
-          Låst
+        Låst
       </mat-radio-button>
     </mat-radio-group>
 
@@ -101,9 +89,7 @@
   <span fxLayout="row" fxLayoutAlign="space-between center">
     <button mat-button [disabled]="!isFormNotEmpty()" color="warn" (click)="reset()">Nullstill</button>
 
-    <button mat-button color="primary" 
-        [disabled]="form.invalid || form.pristine"
-        (click)="onSubmit()">Bruk
+    <button mat-button color="primary" [disabled]="form.invalid || form.pristine" (click)="onSubmit()">Bruk
     </button>
   </span>
 </form>
