--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -12,13 +12,13 @@
 
   </mat-sidenav>
 
-  <mat-sidenav-content fxLayout="column" class="h-100">
+  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden" class="h-100">
 
     <app-main-top-nav-wrapper [config]="config" (toggleDrawer)="toggleDrawer()">
     </app-main-top-nav-wrapper>
 
     <!-- h-100 for iOS Safari fix -->
-    <div  fxFlex style="overflow-y:auto;position:relative" [@routeAnimation]="prepareRoute(outlet)">
+    <div fxFlex style="overflow-y:auto;overflow-x:hidden;position:relative" [@routeAnimation]="prepareRoute(outlet)">
       <router-outlet #outlet="outlet"></router-outlet>
     </div>
 
