--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,8 +12,8 @@
   --ion-color-primary: black;
 }
 
-html, body { height: 100%; background:$background-color;color:black;overflow:hidden;padding:0;margin:0}
-body {font-family: Roboto, "Helvetica Neue", sans-serif;}
+html, body { height: 100%; background:$background-color;color:black;overflow:hidden;padding:0;margin:0; overflow-x:hidden;}
+body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
 
 .bg-primary{background:$primary!important;color:white;}
 .bg-primary-light{background:$primary-light!important;color:black;}
