--- a/src/app/mission-modules/mission-document-form/mission-document-form-view/mission-document-form-view.component.html
+++ b/src/app/mission-modules/mission-document-form/mission-document-form-view/mission-document-form-view.component.html
@@ -21,7 +21,7 @@
 
     <br />
 
-    <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+    <button mat-raised-button class="w-100" color="primary" 
         [disabled]="form.invalid || form.pristine"
         (click)="onSubmit()">
         <mat-icon>cloud_upload</mat-icon>
