--- a/src/app/mission-modules/mission-form/mission-form-view/mission-form-view.component.html
+++ b/src/app/mission-modules/mission-form/mission-form-view/mission-form-view.component.html
@@ -45,7 +45,7 @@
 
   <mat-checkbox *ngIf="!isCreateForm" formControlName="finished" color="primary" class="mb-2">Er oppdraget ferdig?</mat-checkbox>
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+  <button mat-raised-button class="w-100" color="primary" 
     [disabled]="form.invalid || (form.pristine)"
     (click)="onSubmit()">
     {{ isCreateForm ? 'Legg til' : 'Oppdater' }}    
