--- a/src/app/profile/profile-form/profile-form-view/profile-form-view.component.html
+++ b/src/app/profile/profile-form/profile-form-view/profile-form-view.component.html
@@ -26,7 +26,7 @@
     </mat-error>
   </mat-form-field>
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary"
+  <button mat-raised-button class="w-100" color="primary"
     [disabled]="profileForm.invalid || profileForm.pristine" (click)="onSubmit()">
     Lagre
   </button>
