--- a/src/app/shared/components/mail-to-form-view/mail-to-form-view.component.html
+++ b/src/app/shared/components/mail-to-form-view/mail-to-form-view.component.html
@@ -9,7 +9,7 @@
         </mat-error>
     </mat-form-field>
     
-    <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+    <button mat-raised-button class="w-100" color="primary" 
         [disabled]="mailToForm.invalid"
         (click)="onSubmit()">
         Send   
