--- a/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
@@ -37,7 +37,7 @@
       </mat-error>
   </mat-form-field>
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+  <button mat-raised-button class="w-100" color="primary" 
     [disabled]="form.invalid || form.pristine"
     (click)="onSubmit()">
     {{ isCreateForm ? 'Legg til' : 'Oppdater' }} 
