--- a/src/app/mission-modules/mission-note-form/mission-note-form-view/mission-note-form-view.component.html
+++ b/src/app/mission-modules/mission-note-form/mission-note-form-view/mission-note-form-view.component.html
@@ -19,7 +19,7 @@
   <mat-checkbox formControlName="pinned">Viktig?</mat-checkbox>
   <br />
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+  <button mat-raised-button class="w-100" color="primary" 
     [disabled]="form.invalid || form.pristine"
     (click)="onSubmit()">
     {{ isCreateForm ? 'Legg til' : 'Oppdater' }}  
