--- a/src/app/profile/settings/app-config-form/app-config-form.component.html
+++ b/src/app/profile/settings/app-config-form/app-config-form.component.html
@@ -8,7 +8,7 @@
     <input matInput placeholder="Antall måneder med data" type="tel" formControlName="initialNumberOfMonths" required>
   </mat-form-field>
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary"
+  <button mat-raised-button class="w-100" color="primary"
     [disabled]="settingsForm.invalid || settingsForm.pristine" (click)="onSubmit()">
     Lagre
   </button>
