--- a/src/app/users/new-password-form/new-password-form-view/new-password-form-view.component.html
+++ b/src/app/users/new-password-form/new-password-form-view/new-password-form-view.component.html
@@ -26,7 +26,7 @@
   </mat-error>
   <br />
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary"
+  <button mat-raised-button class="w-100" color="primary"
     [disabled]="passwordForm.invalid || passwordForm.pristine" (click)="onSubmit()">
     Lagre
   </button>
