--- a/src/app/users/user-form-view/user-form-view.component.html
+++ b/src/app/users/user-form-view/user-form-view.component.html
@@ -57,7 +57,7 @@
     <mat-error *ngIf="email.errors?.email">Epost adressen er ugyldig.</mat-error>
   </mat-form-field>
 
-  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+  <button mat-raised-button class="w-100" color="primary" 
     [disabled]="form.invalid || form.pristine"
     (click)="onSubmit()">
     {{ isCreateForm ? 'Legg til' : 'Oppdater' }} 
